@@ -1,3 +1,9 @@
+2007-04-02  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>
+
+	* flumotion/component/dvb/dvb.py (DVB, DVB.init,
+	  _bus_message_received_cb):
+	Add signal stats to uiState.	
+
 2007-03-29  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>
 
 	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
